# ML-Project-Starter

./: Makefile  README.md  pyproject.toml
.streamlit/: secrets.toml.example
data/: model.joblib
scripts/: deploy.sh
src/: database.py  extractor.py  main.py  model.py  output.py  processor.py  settings.py  streamlit_app.py
tests/: conftest.py  test_database.py  test_extractor.py  test_model.py  test_output.py  test_pipeline.py  test_processor.py
